# sglang-group

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_EN.md  pyproject.toml
configs/: minimax_m27_nvfp4_sglang_group.json
docs/: methods.md
sglang_group/: __init__.py  core.py
sglang_group/_bootstrap/: __init__.py  sitecustomize.py
sglang_group/cli/: __init__.py  install_sglang_patch.py  launch.py  preflight.py
sglang_group/sglang/: __init__.py  candidates.py  compat.py  config.py  native_draft.py  plugin.py  proposer.py  source_patch.py  validation.py  verify_input.py  worker.py
tests/: test_alignment.py  test_candidates.py  test_config.py  test_core.py  test_launch.py  test_native_draft.py  test_proposer_cache.py  test_source_patch.py
